# seismic

./: .gitlab-ci.yml  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
k8s/: deploy.yaml  service.yaml
src/: lib.rs  measurement.rs  measurer.rs  reader.rs  receiver.rs  sender.rs  tracing.rs
