[package]
name = "seismic"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.1.2"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
console-subscriber = "0.1.6"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.tokio]
features = [ "full", "rt-multi-thread" ]
version = "1.19"
